# devpocket-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.test  README.md  TEST_STATUS.md  build-production.sh  check_volumes.py  cleanup_test_environments.py  debug_cluster.py  debug_templates.py  docker-compose.test.yml  docker-compose.yaml  docs  init-mongo.js  nginx.conf  prometheus.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  simple_template_test.py  start.sh  test_environment_creation.py  test_home_directory.py  test_kubectl_exec.py  test_persistence.py  test_user_creation.py  test_websocket.py  update_env_status.py
.github/workflows/: deploy.yml  release.yml  test.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  key_implementation_details.md  project_overview.md  suggested_commands.md  task_completion_requirements.md  tech_stack.md
app/: constants.py  main.py
app/api/: auth.py  clusters.py  environments.py  templates.py  websocket.py
app/core/: config.py  database.py  logging.py  security.py
app/middleware/: auth.py  rate_limiting.py  slash_redirect.py
app/models/: cluster.py  environment.py  error_responses.py  template.py  user.py
app/services/: auth_service.py  cluster_service.py  email_service.py  environment_service.py  template_service.py
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
plans/: MULTI_CLUSTER_TASKS.md  TEST_STATUS.md
scripts/: README.md  add_default_ovh_cluster.py  deploy.sh  get-version.sh  reset_collections.py  run-tests.sh  seed_templates.py  show_default_templates.py  update-secrets.sh
tests/: conftest.py  test_auth.py  test_environments.py  test_health.py  test_objectid_fix.py  test_rate_limiting.py  test_templates.py  test_templates_simple.py  test_websocket.py
